# db_project

./: .gitignore  README.md  app.py  config.py  example.md  main.py  pyproject.toml  quick_start.py  requirements.txt
data/: real_performance_results.csv  sample_performance.csv  产品表.csv  卖家表.csv
scripts/: benchmark.py  data_generator.py  data_loader.py  visualize.py
